fix for header height, body height (cards were cutoff at top)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ body {
     color: #1f1f1f;
     font-size: 0.9rem;
     background-color: var(--primary-color);
-    height: 2600px;
+    height: 2155px;
     position: relative;
     overflow-x: hidden;
 }
@@ -262,7 +262,7 @@ section h3 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 100px;
+    padding-top: 135px;
 }
 
 #home {
